[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/white_square.png" type="Texture" id=1]
[ext_resource path="res://Objects/MenuHandler.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/HUD_BG_Side.png" type="Texture" id=3]
[ext_resource path="res://GUI/HeaderSign.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/HUD/HUD_Ropes.png" type="Texture" id=5]
[ext_resource path="res://Assets/Shaders/SimpleTransition.tres" type="Material" id=6]
[ext_resource path="res://GUI/SimpleButton.tscn" type="PackedScene" id=7]

[node name="MenuHandler" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GameMenu" type="Node2D" parent="."]
position = Vector2( 1371.56, 1.49509 )

[node name="Bg" type="Sprite" parent="GameMenu"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
offset = Vector2( 64, 135 )

[node name="HUD_Ropes" type="Sprite" parent="GameMenu"]
position = Vector2( 297.65, 410.313 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
margin_left = 133.608
margin_top = 287.754
margin_right = 298.608
margin_bottom = 394.754
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseSign" parent="GameMenu/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = -1.0
margin_right = 165.0
margin_bottom = 41.163
text = "Level 1"
valign = 0

[node name="Restart" parent="GameMenu/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 46.0
margin_right = 165.096
margin_bottom = 76.0
text = "Restart level"

[node name="BackToMenu" parent="GameMenu/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 80.0
margin_right = 165.0
margin_bottom = 110.0
text = "Back to menu"

[node name="GUI" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaximumAntsLabel" type="Label" parent="GUI/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="AntsLabel" type="Label" parent="GUI/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Tween" type="Tween" parent="."]

[node name="TweenTransition" type="Tween" parent="."]

[node name="EndScreen" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Sprite" parent="EndScreen"]
modulate = Color( 0.486275, 0.486275, 0.486275, 0.509804 )
position = Vector2( -0.814453, -0.598755 )
scale = Vector2( 30.1402, 17 )
texture = ExtResource( 1 )
offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="EndScreen"]
position = Vector2( 958.809, 545.294 )
scale = Vector2( 6, 6 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="EndScreen"]
margin_left = 794.518
margin_top = 470.272
margin_right = 1028.52
margin_bottom = 614.272
grow_horizontal = 2
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 84, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMessage" parent="EndScreen/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = -1.0
margin_right = 234.957
margin_bottom = 41.163
text = "Level completed!"
valign = 0

[node name="Next" parent="EndScreen/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 46.0
margin_right = 234.0
margin_bottom = 76.0
text = "Next level"

[node name="Restart" parent="EndScreen/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 80.0
margin_right = 234.0
margin_bottom = 110.0
text = "Restart level"

[node name="BackToMenu" parent="EndScreen/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 114.0
margin_right = 234.0
margin_bottom = 144.0
text = "Back to menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Transition" type="ColorRect" parent="."]
material = ExtResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GameMenu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="EndScreen/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="EndScreen/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="EndScreen/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
